gcc/cp/ 	PR bootstrap/61210 	* pt.c (tsubst_copy, tsubst_omp_for_iterator, tsubst_expr) 	(tsubst_copy_and_build): Perform recursive substitutions in a 	deterministic order.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@210645 138bc75d-0d04-0410-961f-82ee72b054a4